frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-entrypoint
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
